# selvit-cli

./: Cargo.toml  flake.nix
src/: main.rs
