[package]
name = "selvit"
version = "0.1.0"
edition = "2024"
authors = ["Tor torberge@outlook.com"]
description = "track your inputs/outputs"
license = "GPL-3.0-or-later"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0.1"
rand = "0.8"
chrono = {version = "0.4.38", features = ["serde"] }
toml = "0.8.23"
nonempty = { version = "0.11.0", features = ["serialize"] }
chrono-tz = "0.8"
